Shopify - UX Handbook Technical Writer. Lecle Vietnam UI/UX Designer | SmartRecruiters. Job Application for UX Engineer at dv01. Job Application for Principal UX & Product Designer at Conductor. ChannelVAS - Jobs: UX Designer - Apply online. Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page. Deposit Solutions GmbH - Jobs: UX/UI Designer - Apply online. Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters. Farfetch Careers - Senior UI/UX Product Designer. Servian - UX/UI Designer. Brandwatch Careers - Product/UX Designer. UX Designer - Think Company - Career Page.       Lead UI / UX Designer (m/w/d) - Caseking GmbH     . Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board. Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board. Woongjin, Inc UX Designer (Designer / Publisher) | SmartRecruiters. iAdvize UI/UX Designer H/F | SmartRecruiters.     UX Writer at MEKARI (PT. Mid Solusi Nusantara) . Publicis Groupe UX Designer / Konzepter  (m/w/d) | SmartRecruiters. Molekule - Senior UX Product Designer. UX/UI Designer - iTech Media - Career Page. BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup. BCG Digital Ventures - Senior UX Designer - FinTech Venture Startup. BCG Digital Ventures - Senior UX/UI Designer - Stealth Automotive Marketplace. Helbiz Inc. - UX/UI Designer. HomeX - Senior Content Lead (Marketing + UX). HomeX - Senior Content Lead (Marketing + UX). Dvele - UI/UX Designer.       UX Designer - DefinedCrowd     . Fiix Software - Jobs: User Experience (UX) Designer - Apply online. Fiix Software - Jobs: Director, UX Design - Apply online. Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN. Job @ Medici Living Digital Services (Berlin): UX/... | JOIN. Job @ Medici Living Digital Services (Berlin): UX/... | JOIN. Job @ Global Savings Group (Munich): UX Designer (... | JOIN. Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN. ShopUp UX/UI Designer | Smar

--- a/ux.html
+++ b/ux.html
@@ -65,11 +65,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deposit-solutions.workable.com/j/7658BED05C'>Deposit Solutions GmbH - Jobs: UX/UI Designer - Apply online</a></h5> 
+<h5><a href='https://deposit-solutions.workable.com/j/7658BED05C'>Deposit Solutions GmbH - Jobs: UX/UI Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176926-senior-web-application-developer-ui-ux-developer'>Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ArthurGrandTechnologiesInc/743999692176926-senior-web-application-developer-ui-ux-developer'>Arthur Grand Technologies Inc Senior Web Application Developer / UI/UX Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -203,11 +203,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zones/job/omNAafwD'>Zones Careers - UX Digital Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zones/job/omNAafwD'>Zones Careers - UX Digital Designer</a></h5> 
 <p><span class="badge badge-light">Seattle Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/tytConsulting/743999692211731-auxiliar-administrativa-giro-restaurantero'>tyt consulting AUXILIAR ADMINISTRATIVA GIRO RESTAURANTERO | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/tytConsulting/743999692211731-auxiliar-administrativa-giro-restaurantero'>tyt consulting AUXILIAR ADMINISTRATIVA GIRO RESTAURANTERO | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -233,7 +233,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -292,7 +292,7 @@ for candidates with solid technical foundations and a desire to continue learnin
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4358212002'>Job Application for UX Designer (remote) at Ad Hoc</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4358212002'>Job Application for UX Designer (remote) at Ad Hoc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -376,7 +376,7 @@ data?...</p>
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pac-12-networks/job/o1qBafwW'>Pac-12 Networks Careers - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pac-12-networks/job/o1qBafwW'>Pac-12 Networks Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -409,7 +409,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://bridgemaker.join.com/jobs/253674-product-designer-ux-and-ui-m-w-d-uptodate'>Product Designer UX & ... | JOIN - Job @ Bridgemaker (Munich)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bridgemaker.join.com/jobs/253674-product-designer-ux-and-ui-m-w-d-uptodate'>Product Designer UX & ... | JOIN - Job @ Bridgemaker (Munich)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>11. Juli 2019 ... Bridgemaker GmbH has a job opening for Product Designer UX & UI (m/w/d) - 
 uptodate in Munich (published: 15.07.2019). Apply now or check the other?...</p>
@@ -424,7 +424,7 @@ uptodate in Munich (published: 15.07.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://cobibike.recruitee.com/o/ux-visual-designer-fmx'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/ux-visual-designer-fmx'>
       UX Visual Designer (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -446,7 +446,7 @@ uptodate in Munich (published: 15.07.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://supermercato24.recruitee.com/o/uxui-designer-milano'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://supermercato24.recruitee.com/o/uxui-designer-milano'>
       UX/UI Designer - Supermercato24
     </a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
