Data Science Lead.       FIGHT FRAUD! As a Data Scientist - FRISS | fraud, risk & compliance     . Job Application for Lead Data Scientist, Applied Machine Learning at Tempus. CACI Ltd - Jobs: Data Scientist - Apply online. The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online. Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs. Crossover Health Careers - Data Scientist. Talkspace - Jobs: Data Scientist, User Behavior - Apply online. Job Application for Senior Data Scientist at Ask Media Group. DataProphet Junior Data Scientist | SmartRecruiters. DataProphet Senior Data Scientist | SmartRecruiters.       (Ref. 474/2019) Data Science / Project Manager - Syone     . Publicis Groupe Senior Data Scientist | SmartRecruiters.     Data Scientist at Quantium . Postman - Jobs: Data Science Intern, Analytics - Apply online.       Data Science Internship (MSc or PhD) Health care - Pacmed     . Job Application for Data Scientist at WELL Health Inc.. Data Scientist ,China - Fractal Analytics - Career Page.       Data Scientist – Natural Language Processing - DefinedCrowd     . Job Application for Data Scientist, Risk  at Brex. Job @ talpasolutions (Essen): Data Scientist | JOIN. Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN. Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN. Job @ Medlanes (Berlin): Jr. Data Scientist at Dig... | JOIN. Criteo - Product Data Scientist - Analytics. Nobul - Data Scientist. Shopify - Senior Data Scientist (multiple roles). Perpetua Labs - Data Scientist, Product - Toronto. PicsArt - Lead Data Scientist. DataProphet Junior Data Scientist | SmartRecruiters. Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online. Bosch Group Data Scientist Engineer | SmartRecruiters. Data Scientist (Ph.D) | The Fahrenheit Group. The Havas Group Careers - Data Science Director - Media. Job Application for Data Scientist (m/w/d) at Viessmann Group. GOJEK - Data Scientist, Recommen

--- a/data-science.html
+++ b/data-science.html
@@ -76,7 +76,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -209,7 +209,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -331,7 +331,7 @@ federal?...</p>
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034441-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034441-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -339,7 +339,7 @@ federal?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/atlan/b57dcdd0-2b0a-4023-8516-f50ebbc3e689'>Atlan - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atlan/b57dcdd0-2b0a-4023-8516-f50ebbc3e689'>Atlan - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -360,7 +360,7 @@ datasets and machine learning infrastructure to develop and tackle the complex?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c'>Tubular Labs - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c'>Tubular Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
